cobalt/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt-service
  labels:
    app: cobalt
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cobalt
