cobalt/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {} # Selects all pods in the namespace
  policyTypes:
    - Ingress
  ingress:
    - {}
